bk_ida/sjengida/g1/setup_epd_line
/data/output_dir/patch/sjeng/ida/gcc/O1/sjeng-gcc-O1/setup_epd_line/src/epd.c:630:14: error: use of undeclared identifier 'rankoffsets_0'
rankoffset = rankoffsets_0[++rankp]; 
             ^
1 error generated.
make: *** [/data/output_dir/patch/sjeng/ida/gcc/O1/sjeng-gcc-O1/setup_epd_line/src/obj/epd.o] Error 1
